--- a/config.json
+++ b/config.json
@@ -6,10 +6,10 @@
   "autocreatedb": true,
   "approval": false,
   "premium": false,
-  "email": "sanjivfesh@gmail.com",
-  "adminpass": "ryukodev",
+  "email": "rebanosunnel61@gmail.com",
+  "adminpass": "sunneldev",
   "operators": [
-    "100091459940475"
+    "100071157053751"
   ],
   "autorestart": {
     "status": false,
